[package]
name = "moleculer-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moleculer = "0.3.3"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.24.1", features = ["full"] }
warp = "0.3"
eyre = "0.6.8"
env_logger = "0.10.0"
color-eyre = "0.6.2"
base64 = "0.13.0"
block-modes = "0.8.1"
hex-literal="0.3.3"
aes-gcm = "0.10.1"
rand = "0.8.5"

[dependencies.uuid]
version = "1.2.2"
features = ["v4", "fast-rng", "macro-diagnostics"]
